apps/inventory/.turbo/turbo-dev.log

> inventory@ dev C:\Users\arief\Herd\central-kitchen\apps\inventory
> tsx ../../scripts/kill-port.ts 3000 && vite dev --port 3000

🔍 Searching for processes on ports: 3000
✅ Port 3000: No process found

✨ No processes to kill
Route file "C:/Users/arief/Herd/central-kitchen/apps/inventory/src/routes/requisitions/index.tsx" does not contain any route piece. This is likely a mistake.
Route file "C:/Users/arief/Herd/central-kitchen/apps/inventory/src/routes/uom-conversions/index.tsx" does not contain any route piece. This is likely a mistake.

  [32m[1mVITE[22m v7.2.1[39m  [2mready in [0m[1m10471[22m[2m[0m ms[22m

  [32m➜[39m  [1mLocal[22m:   [36mhttp://localhost:[1m3000[22m/[39m
[2m  [32m➜[39m  [1mNetwork[22m[2m: use [22m[1m--host[22m[2m to expose[22m
[vite] connected.
[2m21.50.40[22m [31m[1m[vite][22m[39m [31mInternal server error: Failed to resolve import "@/hooks/use-toast" from "src/routes/purchase-orders/index.tsx?tsr-split=component". Does the file exist?[39m
  Plugin: [35mvite:import-analysis[39m
  File: [36mC:/Users/arief/Herd/central-kitchen/apps/inventory/src/routes/purchase-orders/index.tsx?tsr-split=component[39m:83:25
[33m  19 |  import { Textarea } from "@/components/ui/textarea";
  20 |  import { Separator } from "@/components/ui/separator";
  21 |  import { useToast } from "@/hooks/use-toast";
     |                            ^
  22 |  const mockPurchaseOrders = [{
  23 |    id: "po-001",[39m
      at TransformPluginContext._formatLog (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:29608:43)
      at TransformPluginContext.error (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:29605:14)
      at normalizeUrl (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:27728:18)
      at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
      at async file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:27786:32
      at async Promise.all (index 18)
      at async TransformPluginContext.transform (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:27754:4)
      at async EnvironmentPluginContainer.transform (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:29406:14)
      at async loadAndTransform (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:23277:26)
SyntaxError: [vite] The requested module 'react-hook-form' does not provide an export named 'useFormArray'
    at analyzeImportedModDifference (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/module-runner.js:459:36)
    at ModuleRunner.processImport (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/module-runner.js:1028:54)
    at ModuleRunner.cachedRequest (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/module-runner.js:1051:33)
SyntaxError: [vite] The requested module 'react-hook-form' does not provide an export named 'useFormArray'
    at analyzeImportedModDifference (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/module-runner.js:459:36)
    at ModuleRunner.processImport (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/module-runner.js:1028:54)
    at ModuleRunner.cachedRequest (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/module-runner.js:1051:33)
Error reading appStream: TypeError [ERR_INVALID_STATE]: Invalid state: Controller is already closed
    at ReadableStreamDefaultController.enqueue (node:internal/webstreams/readablestream:1077:13)
    at Object.write (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/@tanstack+router-core@1.134.13/node_modules/@tanstack/router-core/dist/esm/ssr/transformStreamWithRouter.js:29:18)
    at Object.onData (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/@tanstack+router-core@1.134.13/node_modules/@tanstack/router-core/dist/esm/ssr/transformStreamWithRouter.js:157:26)
    at readStream (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/@tanstack+router-core@1.134.13/node_modules/@tanstack/router-core/dist/esm/ssr/transformStreamWithRouter.js:50:20) {
  code: 'ERR_INVALID_STATE'
}
[2m21.50.42[22m [31m[1m[vite][22m[39m [31mInternal server error: Failed to resolve import "@/hooks/use-toast" from "src/routes/purchase-orders/index.tsx?tsr-split=component". Does the file exist?[39m
  Plugin: [35mvite:import-analysis[39m
  File: [36mC:/Users/arief/Herd/central-kitchen/apps/inventory/src/routes/purchase-orders/index.tsx?tsr-split=component[39m:83:25
[33m  19 |  import { Textarea } from "@/components/ui/textarea";
  20 |  import { Separator } from "@/components/ui/separator";
  21 |  import { useToast } from "@/hooks/use-toast";
     |                            ^
  22 |  const mockPurchaseOrders = [{
  23 |    id: "po-001",[39m
      at TransformPluginContext._formatLog (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:29608:43)
      at TransformPluginContext.error (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:29605:14)
      at normalizeUrl (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:27728:18)
      at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
      at async file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:27786:32
      at async Promise.all (index 18)
      at async TransformPluginContext.transform (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:27754:4)
      at async EnvironmentPluginContainer.transform (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:29406:14)
      at async loadAndTransform (file:///C:/Users/arief/Herd/central-kitchen/node_modules/.pnpm/vite@7.2.1_@types+node@22.1_78d1110b04d3cbfc9712ffbe88d3a060/node_modules/vite/dist/node/chunks/config.js:23277:26)
